# port-libjson

./: .gitignore  README.md  all_cves.json  dependents.json  test-original.sh  workflow.yaml
.github/workflows/: build-debs.yml
original/.pc/: applied-patches
original/tests/: test_locale.c  test_printbuf.c  test_set_serializer.c  test_strerror.c
packaging/: package.env
safe/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
safe/abi/: public-api-manifest.tsv  unsafe-audit.tsv
safe/apps/: CMakeLists.txt
safe/debian/: changelog  copyright  libjson-c-dev.install  rules
safe/debian/tests/: unit-test
safe/src/: abi.rs  arraylist.rs  debug.rs  errors.rs  exports.rs  iterators.rs  lib.rs  linkhash.rs  locale.rs  mini_json.rs  numeric.rs  object.rs  patch.rs  pointer.rs  printbuf.rs  random_seed.rs  serializer.rs  strerror.rs  stubs.rs  tokener.rs  utf8.rs  util.rs  variadic.c  version.rs  visit.rs
safe/tests/foundation/: foundation_smoke.c
safe/tests/package/cmake-smoke/: CMakeLists.txt
safe/tests/upstream/: CMakeLists.txt  json_patch_tests.json  test_deep_copy_serializer_userdata.c  test_deep_copy_serializer_userdata.expected  test_json_patch.expected  test_json_pointer.c  test_json_pointer.expected
safe/tools/: build-debs.sh  check-layout.sh  check-static-archive.sh  check-symbols.sh  check-unsafe.sh  collect-native-static-libs.sh  full-verify.sh  header-abi-audit.sh  probe-layout.c  relink-original-tests.sh  run-upstream-tests.sh
scripts/: build-debs.sh  install-build-deps.sh
